# Testwork

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
cmake/: CompileOptions.cmake
include/curves/curves/: circle.h  curves.h  curves_base.h  ellipse.h  helix.h  vector3d.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/curves/: CMakeLists.txt
src/curves/curves/: circle.cpp  ellipse.cpp  helix.cpp  vector3d.cpp
